<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="temperature">Temperature</string>
    <string name="sky">sky</string>
    <string name="add_to_favourites">add to favourites</string>
    <string name="search_save"><![CDATA[search & save]]></string>
    <string name="country">Country</string>
    <string name="wind">wind</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="location_error">Location does not exist!</string>
    <string name="refresh_all_locations">Refresh all locations</string>
    <string name="change_all_to_celsius">Change all to celsius</string>
    <string name="change_all_to_fahrenheit">change all to fahrenheit</string>
    <string name="refresh">refresh</string>
    <string name="favourite_locations">Favourite Locations</string>
    <string name="humidity_land">humidity:</string>
    <string name="wind_land">wind:</string>
    <string name="pressure_land">pressure:</string>
</resources>