<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".AdditionalInfoFragment">


    <TextView
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:paddingTop="30dp"
        android:text="@string/location"  />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/wind"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/humidity"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:paddingTop="30dp"
        android:text="@string/pressure"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />




</LinearLayout>