<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainWeatherFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="{@value #AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY}"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_city_name"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:text="@string/search_save" />

    <TextView
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:paddingTop="30dp"
        android:text="@string/location"  />

    <TextView
        android:id="@+id/sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/sky"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp" />


</LinearLayout>